--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
+    "generate:api": "openapi-typescript https://api.updateio.dev/api/app/swagger.json -o ./src/renderer/src/lib/api/v1.d.ts --indent 1",
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
@@ -65,6 +66,8 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next-themes": "^0.3.0",
+    "openapi-fetch": "^0.12.2",
+    "openapi-react-query": "^0.2.0",
     "prisma": "^5.20.0",
     "qrcode.react": "^4.0.1",
     "react-day-picker": "^9.1.3",
@@ -96,6 +99,7 @@
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
+    "openapi-typescript": "^7.4.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
