fix prisma support for windows

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,6 +9,10 @@ files:
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
+extraResources:
+  - "prisma/**/*"
+  - "node_modules/.prisma/**/*"
+  - "node_modules/@prisma/client/**/*"
 asarUnpack:
   - resources/**
 win:
