--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-day-picker": "^9.1.3",
     "react-hook-form": "^7.53.0",
     "recharts": "^2.13.0",
+    "slash": "^5.1.0",
     "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "sqlite3": "5.1.6",
@@ -93,6 +94,7 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/slash": "^2.0.0",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.5.12",
     "@vitejs/plugin-react": "^4.3.1",
