--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "compare-versions": "^6.1.1",
     "date-fns": "^4.1.0",
     "electron-updater": "^6.1.7",
     "embla-carousel-react": "^8.3.0",
